--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <title>MyLittleForm</title>
 </head>
 <body>
-    <main id="box">
-        <div>
-            <h2>Form</h2>
+    <main>
+        <div id="box">
+            <h2 class="title-form">Form</h2>
+            </div>
+            <div class="box-form">
+            <p>🌷🌼🌻🌺🌳🍀</p>
         </div>
     </main>
     <script src="./script.js"></script>
