agragando elementos al form

--- a/index.html
+++ b/index.html
@@ -10,13 +10,96 @@
 </head>
 <body>
     <main>
+        <div><h2>Form</h2></div>
         <div id="box">
-            <h2 class="title-form">Form</h2>
-            </div>
             <div class="box-form">
-            <p>🌷🌼🌻🌺🌳🍀</p>
+                <input type="text" id="searchInput" placeholder="Filtrar..." />
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Edad</th>
+                            <th>Lenguaje</th>
+                        </tr>
+                    </thead>
+                    <tbody id="names">
+                        <tr>
+                    <td>May</td>
+                    <td>32</td>
+                    <td>JavaScript</td>
+                        </tr>
+                        <tr>
+                            <td>Ana</td>
+                            <td>30</td>
+                            <td>JavaScript</td>
+                                </tr>
+                                <tr>
+                                    <td>Rob</td>
+                                    <td>36</td>
+                                    <td>React</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Alex</td>
+                                            <td>45</td>
+                                            <td>C#</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>David</td>
+                                                    <td>26</td>
+                                                    <td>JavaScript</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Krely</td>
+                                                    <td>31</td>
+                                                    <td>React</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Cleo</td>
+                                                    <td>43</td>
+                                                    <td>Java</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Pedro</td>
+                                                    <td>19</td>
+                                                    <td>Vue</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Jorge</td>
+                                                    <td>59</td>
+                                                    <td>Cobol</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Juanes</td>
+                                                    <td>29</td>
+                                                    <td>JavaScript</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Ernesto</td>
+                                                    <td>22</td>
+                                                    <td>PHP</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Sandra</td>
+                                                    <td>29</td>
+                                                    <td>R</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Verison</td>
+                                                    <td>34</td>
+                                                    <td>React Native</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>Marta</td>
+                                                    <td>30</td>
+                                                    <td>React</td>
+                                                  </tr>
+                    </tbody>
+                </table>
         </div>
+        <p>🌷🌼🌻🌺🌳🍀</p>
+    </div>
+
     </main>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="text/JavaScript"></script>
 </body>
 </html>
